--- a/plugin.xml
+++ b/plugin.xml
@@ -19,80 +19,78 @@
   under the License.
 -->
 
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:rim="http://www.blackberry.com/ns/widgets"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-ionic-webview"
-    version="1.1.11">
-    <name>Ionic's WKWebView Engine</name>
-    <description>Ionic's WKWebView Engine Plugin</description>
-    <license>Apache 2.0</license>
-    <keywords>cordova,wkwebview,webview</keywords>
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:rim="http://www.blackberry.com/ns/widgets" xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-ionic-webview" version="1.1.11">
+    <name>cordova-plugin-ionic-webview</name>
+    <description>The official Ionic's WKWebView Engine Plugin</description>
+    <license>Apache-2.0</license>
+    <keywords>cordova,wkwebview</keywords>
     <repo>https://github.com/ionic-team/cordova-plugin-ionic-webview</repo>
 
 	<engines>
-        <engine name="cordova-ios" version=">=4.0.0-dev" />
-        <engine name="apple-ios" version=">=9.0" />
+        <engine name="cordova-ios" version=">=4.0.0-dev"/>
+        <engine name="apple-ios" version=">=9.0"/>
 	</engines>
 
     <!-- ios -->
     <platform name="ios">
         <js-module src="src/www/ios/ios-wkwebview-exec.js" name="ios-wkwebview-exec">
-            <clobbers target="cordova.exec" />
+            <clobbers target="cordova.exec"/>
         </js-module>
 
         <config-file target="config.xml" parent="/*">
             <allow-navigation href="http://localhost:8080/*"/>
             <feature name="CDVWKWebViewEngine">
-                <param name="ios-package" value="CDVWKWebViewEngine" />
+                <param name="ios-package" value="CDVWKWebViewEngine"/>
             </feature>
-            <preference name="CordovaWebViewEngine" value="CDVWKWebViewEngine" />
+            <preference name="CordovaWebViewEngine" value="CDVWKWebViewEngine"/>
         </config-file>
 
-        <framework src="WebKit.framework" weak="true" />
+        <framework src="WebKit.framework" weak="true"/>
 
-        <header-file src="src/ios/CDVWKWebViewEngine.h" />
-        <source-file src="src/ios/CDVWKWebViewEngine.m" />
-        <header-file src="src/ios/CDVWKWebViewUIDelegate.h" />
-        <source-file src="src/ios/CDVWKWebViewUIDelegate.m" />
-        <header-file src="src/ios/CDVWKProcessPoolFactory.h" />
-        <source-file src="src/ios/CDVWKProcessPoolFactory.m" />
-        <asset src="src/ios/wk-plugin.js" target="wk-plugin.js" />
+        <header-file src="src/ios/CDVWKWebViewEngine.h"/>
+        <source-file src="src/ios/CDVWKWebViewEngine.m"/>
+        <header-file src="src/ios/CDVWKWebViewUIDelegate.h"/>
+        <source-file src="src/ios/CDVWKWebViewUIDelegate.m"/>
+        <header-file src="src/ios/CDVWKProcessPoolFactory.h"/>
+        <source-file src="src/ios/CDVWKProcessPoolFactory.m"/>
+        <asset src="src/ios/wk-plugin.js" target="wk-plugin.js"/>
 
         <!--GCDWebServer headers-->
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServer.h" />
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.h" />
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.h" />
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerHTTPStatusCodes.h" />
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerPrivate.h" />
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.h" />
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.h" />
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.h" />
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.h" />
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.h" />
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.h" />
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.h" />
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.h" />
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.h" />
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.h" />
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServer.h"/>
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.h"/>
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.h"/>
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerHTTPStatusCodes.h"/>
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerPrivate.h"/>
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.h"/>
+        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.h"/>
+        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.h"/>
+        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.h"/>
+        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.h"/>
+        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.h"/>
+        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.h"/>
+        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.h"/>
+        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.h"/>
+        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.h"/>
 
         <!--GCDWebServer source-->
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServer.m" />
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.m" />
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.m" />
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.m" />
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.m" />
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.m" />
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.m" />
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.m" />
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.m" />
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.m" />
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.m" />
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.m" />
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.m" />
+        <source-file src="src/ios/GCDWebServer/Core/GCDWebServer.m"/>
+        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.m"/>
+        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.m"/>
+        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.m"/>
+        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.m"/>
+        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.m"/>
+        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.m"/>
+        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.m"/>
+        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.m"/>
+        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.m"/>
+        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.m"/>
+        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.m"/>
+        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.m"/>
 
         <!--GCDWebServer dependencies-->
-        <framework src="libz.tbd" />
+        <framework src="libz.tbd"/>
 
     </platform>
+    <issue>https://github.com/ionic-team/cordova-plugin-ionic-webview/issues</issue>
+    <author>Ionic Team</author>
 </plugin>
