--- a/plugin.xml
+++ b/plugin.xml
@@ -39,6 +39,7 @@
 
         <config-file target="config.xml" parent="/*">
             <allow-navigation href="http://localhost:8080/*"/>
+            <allow-navigation href="http://127.0.0.1:8080/*"/>
             <feature name="CDVWKWebViewEngine">
                 <param name="ios-package" value="CDVWKWebViewEngine"/>
             </feature>
