--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sync_plugin_xml": "sync-cordova-xml package.json plugin.xml --output=plugin.xml",
     "version": "npm run sync_plugin_xml && git add plugin.xml",
-    "deploy": "np --yolo"
+    "deploy": "np"
   },
   "repository": {
     "type": "git",
